# tauri-yew-game-of-life

./: README.md
.github/workflows/: release.yml  rust.yml
frontend/: Cargo.toml  index.html
frontend/public/: glue.js  main.css
frontend/src/: app.rs  bindings.rs  cell.rs  main.rs
src-tauri/: tauri.conf.json
