[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo-console = "0.2.1"
gloo-timers = "0.2.2"
js-sys = "0.3.56"
rand = "0.8.4"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
web-sys = "0.3.56"
yew = "0.19.3"
